syntax = "proto3";
package thesixnetwork.sixnft.evmsupport;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "evmsupport/params.proto";
import "evmsupport/address_binding.proto";
import "evmsupport/action_signer.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/thesixnetwork/sixnft/x/evmsupport/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/thesixnetwork/sixnft/evmsupport/params";
  }
  // Queries a AddressBinding by index.
	rpc AddressBinding(QueryGetAddressBindingRequest) returns (QueryGetAddressBindingResponse) {
		option (google.api.http).get = "/thesixnetwork/sixnft/evmsupport/address_binding/{ethAddress}/{nativeAddress}";
	}

	// Queries a list of AddressBinding items.
	rpc AddressBindingAll(QueryAllAddressBindingRequest) returns (QueryAllAddressBindingResponse) {
		option (google.api.http).get = "/thesixnetwork/sixnft/evmsupport/address_binding";
	}

// Queries a ActionSigner by index.
	rpc ActionSigner(QueryGetActionSignerRequest) returns (QueryGetActionSignerResponse) {
		option (google.api.http).get = "/thesixnetwork/sixnft/evmsupport/action_signer/{actorAddress}";
	}

	// Queries a list of ActionSigner items.
	rpc ActionSignerAll(QueryAllActionSignerRequest) returns (QueryAllActionSignerResponse) {
		option (google.api.http).get = "/thesixnetwork/sixnft/evmsupport/action_signer";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetAddressBindingRequest {
	string ethAddress = 1;
  	string nativeAddress = 2;

}

message QueryGetAddressBindingResponse {
	AddressBinding addressBinding = 1 [(gogoproto.nullable) = false];
}

message QueryAllAddressBindingRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAddressBindingResponse {
	repeated AddressBinding addressBinding = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetActionSignerRequest {
	  string actorAddress = 1;

}

message QueryGetActionSignerResponse {
	ActionSigner actionSigner = 1 [(gogoproto.nullable) = false];
}

message QueryAllActionSignerRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllActionSignerResponse {
	repeated ActionSigner actionSigner = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
